--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@ elm-stuff
 elm.js
 Main.html
 compilep.sh
-compilepl.sh
-compilec.sh
-compilepiano.sh
+compilet.sh
 /deprecated/
-/moremidi/
 /src/test/
