Upgraded to elm 0.17
The elm 0.16 version used a (hacked) javascript library for the audio.  This version uses elm ports/

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,5 @@ elm.js
 Main.html
 index.html
 abc-player.js
-compilep.sh
-compilet.sh
-compilee.sh
-compiletjs.sh
 /deprecated/
-/src/test/
+distjs/*.js
