--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@ elm.js
 Main.html
 index.html
 abc-player.js
+compileec0.sh
+abceditorcontroller0.html
 /deprecated/
+/src/examples/editor-controller0/
 distjs/*.js
